--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,6 +1,11 @@
 group 'carnegietechnologies.gallery_saver'
 version '1.0-SNAPSHOT'
 
+configurations.all {
+    resolutionStrategy {
+        force 'androidx.core:core-ktx:1.6.0'
+    }
+}
 buildscript {
     ext.kotlin_version = '1.5.20'
     ext.kotlinCoroutinesVersion = '1.3.8'
@@ -42,7 +47,7 @@ android {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    api 'androidx.core:core-ktx:1.5.0'
+    api 'androidx.core:core-ktx:1.6.0'
     api 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.exifinterface:exifinterface:1.3.2'
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$kotlinCoroutinesVersion"
