--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,6 +1,12 @@
 group 'carnegietechnologies.gallery_saver'
 version '1.0-SNAPSHOT'
 
+configurations.all {
+    resolutionStrategy {
+        force 'androidx.core:core-ktx:1.6.0'
+    }
+}
+
 buildscript {
     ext.kotlin_version = '1.5.20'
     ext.kotlinCoroutinesVersion = '1.3.8'
